--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ relative_permalinks: false
 title:            'Pengfei Zhang'
 tagline:          'Pengfei'
 description:      '<p>Senior Undergraduate Student<br>School of Computer Science,University of Science and Technology of China,Hefei, Anhui.</p>
-                   <p><a href="mailto:service@test.com">zpf0117b@mail.ustc.edu.cn</a></p>'
+                   <p><a href="mailto:zpf0117b@mail.ustc.edu.cn">zpf0117b@mail.ustc.edu.cn</a></p>'
 url:              http://zpf0117b.github.io
 baseurl:          /
 
